test/functions/lydia/paramFunctions/param-fun-intents.good
param-fun-intents.chpl:7: error: Cannot use 'out' intent in a function returning with 'param' intent
param-fun-intents.chpl:7: error: Cannot use 'out' intent in a function returning with 'param' intent
param-fun-intents.chpl:13: error: Cannot use 'inout' intent in a function returning with 'param' intent
param-fun-intents.chpl:17: error: Cannot use 'out' intent in a function returning with 'type' intent
param-fun-intents.chpl:21: error: Cannot use 'in' intent in a function returning with 'type' intent
